@@ -1,3 +1,7 @@
+2000-12-08  Michael Meeks  <michael@helixcode.com>
+
+	* container.c (do_add_cb): upd.
+
 2000-12-01  Michael Meeks  <michael@helixcode.com>
 
 	* container.c (resolve_and_add): upd.
